# trace-record-py

./: DEV_PLAN.md  README.md  main.py  pyproject.toml
tests/: test_trace_recorder.py
trace_recorder/: __init__.py  trace_logger.py
