[project]
name = "trace-recorder"
version = "0.1.0"
description = "Lightweight, self-hosted LangChain agent tracer for capturing tool calls, LLM usage, and timing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.2",
]
authors = [
    {name = "Your Team Name", email = "your.email@example.com"}
]
keywords = ["langchain", "tracing", "observability", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trace_recorder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
